[package]
name = "simulate-promise"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "simulate promise implementation for rust"
repository = "https://github.com/Shcarp/rs-promise.git"

[dependencies]
thiserror = "1.0"
tokio-test = "0.4.2"
tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "time", "macros", "full"] } 
